--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "set NODE_ENV=test&& npm run dev-down-up && jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
     "dev-down-up": "npm run drop-tables && npm run migrate",
     "migrate": "npx migrate-mongo up",
-    "drop-tables": "npx migrate-mongo down"
+    "drop": "npx migrate-mongo down",
+    "set-env-test": "set NODE_ENV=test",
+    "test-dev": "npm-run-all set-env-test drop migrate test:e2e"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -30,14 +32,21 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.4",
-    "ajv": "^8.11.0",
-    "ajv-formats": "^2.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "class-validator-password-check": "^1.0.8",
+    "cloudinary": "^1.30.1",
     "dotenv": "^16.0.1",
     "joi": "^17.6.0",
     "migrate-mongo": "^9.0.0",
     "mongoose": "^6.4.4",
+    "npm-run-all": "^4.1.5",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -48,7 +57,10 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
