--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "dev-down-up": "npm run drop-tables && npm run migrate",
+    "dev-down-up": "npm run drop && npm run migrate",
     "migrate": "npx migrate-mongo up",
     "drop": "npx migrate-mongo down",
     "set-env-test": "set NODE_ENV=test",
